Avoid lifting jump links off left margin

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,11 @@ h2 {
 
 nav a {
   display: inline-block;
-  margin: 0 1ex;
+  margin-right: 1ex;
+}
+
+nav a:last-child {
+  margin-right: 0;
 }
 
 tbody td, tbody th,
